possible last restructure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(cs451projs C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(cs451projs
-        a2.c)
+add_executable(rrScheduler
+        a2/a2.c
+        prime/prime.c)
